BertLSTM ok, fail to add CRF

--- a/Semester 2/DASC7606E - Deep learning/DASC7606E-A2/demo.ipynb
+++ b/Semester 2/DASC7606E - Deep learning/DASC7606E-A2/demo.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Pejoy\\anaconda3\\envs\\nlp_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import Dataset, DatasetDict, IterableDataset, IterableDatasetDict\n",
     "from datasets import load_dataset\n",
@@ -14,35 +23,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['id', 'tokens', 'ner_tags'],\n",
-       "        num_rows: 168300\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['id', 'tokens', 'ner_tags'],\n",
-       "        num_rows: 8800\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['id', 'tokens', 'ner_tags'],\n",
-       "        num_rows: 471911\n",
-       "    })\n",
-       "})"
+       "['O',\n",
+       " 'B-PER',\n",
+       " 'I-PER',\n",
+       " 'B-LOC',\n",
+       " 'I-LOC',\n",
+       " 'B-CORP',\n",
+       " 'I-CORP',\n",
+       " 'B-GRP',\n",
+       " 'I-GRP',\n",
+       " 'B-PROD',\n",
+       " 'I-PROD',\n",
+       " 'B-CW',\n",
+       " 'I-CW']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw_datasets"
+    "raw_datasets\n",
+    "num_labels = len(raw_datasets['train'].features['ner_tags'].feature.names)\n",
+    "raw_datasets['train'].features['ner_tags'].feature.names"
    ]
   },
   {
