--- a/Semester 2/COMP7404D - Computational intelligence and machine learning/a4.ipynb
+++ b/Semester 2/COMP7404D - Computational intelligence and machine learning/a4.ipynb
@@ -1516,13 +1516,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "id": "cos_X9WTAe3C"
    },
    "outputs": [],
    "source": [
-    "#Your answer here\n"
+    "#Your answer here\n",
+    "\n",
+    "# 1. download the dataset from the URL\n",
+    "# https://spamassassin.apache.org/old/publiccorpus/20021010_easy_ham.tar.bz2\n",
+    "# https://spamassassin.apache.org/old/publiccorpus/20021010_spam.tar.bz2\n",
+    "ham_url = 'https://spamassassin.apache.org/old/publiccorpus/20021010_easy_ham.tar.bz2'\n",
+    "spam_url = 'https://spamassassin.apache.org/old/publiccorpus/20021010_spam.tar.bz2'\n",
+    "import tarfile\n",
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "def download_and_extract(url, extract_to='.'):\n",
+    "    \"\"\"Download and extract a tar.bz2 file.\"\"\"\n",
+    "    response = requests.get(url)\n",
+    "    file_name = url.split('/')[-1]\n",
+    "    with open(file_name, 'wb') as f:\n",
+    "        f.write(response.content)\n",
+    "    with tarfile.open(file_name, 'r:bz2') as tar:\n",
+    "        tar.extractall(path=extract_to)\n",
+    "    os.remove(file_name)\n",
+    "    \n",
+    "download_and_extract(ham_url, extract_to='ham')\n",
+    "download_and_extract(spam_url, extract_to='spam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. load the dataset into a pandas DataFrame\n",
+    "import pandas as pd\n",
+    "\n",
+    "def load_emails(folder):\n",
+    "    \"\"\"Load emails from a folder into a DataFrame.\"\"\"\n",
+    "    emails = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        with open(os.path.join(folder, filename), 'r', encoding='latin-1') as f:\n",
+    "            content = f.read()\n",
+    "            emails.append(content)\n",
+    "    return pd.DataFrame(emails, columns=['email'])\n",
+    "\n",
+    "\n",
+    "ham_df = load_emails('ham/easy_ham')\n",
+    "spam_df = load_emails('spam/spam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# 3. preprocess the data (e.g., remove headers, tokenize, etc.)\n",
+    "def preprocess_email(email):\n",
+    "    \"\"\"Preprocess an email by removing headers, converting to lowercase, and tokenizing.\"\"\"\n",
+    "    # Remove headers\n",
+    "    email = re.sub(r\"^.*?\\n\\n\", \"\", email, flags=re.DOTALL)\n",
+    "    # Convert to lowercase\n",
+    "    email = email.lower()\n",
+    "    # Replace URLs with \"URL\"\n",
+    "    email = re.sub(r\"http\\S+|www\\S+|https\\S+\", \"URL\", email)\n",
+    "    # Replace numbers with \"NUMBER\"\n",
+    "    email = re.sub(r\"\\d+\", \"NUMBER\", email)\n",
+    "    # Remove punctuation\n",
+    "    email = re.sub(r\"[^\\w\\s]\", \"\", email)\n",
+    "    return email\n",
+    "\n",
+    "# Apply preprocessing to both ham and spam datasets\n",
+    "ham_df['email'] = ham_df['email'].apply(preprocess_email)\n",
+    "spam_df['email'] = spam_df['email'].apply(preprocess_email)\n",
+    "\n",
+    "# Combine ham and spam datasets and create labels\n",
+    "emails = pd.concat([ham_df, spam_df], ignore_index=True)\n",
+    "labels = np.array([0] * len(ham_df) + [1] * len(spam_df))  # 0 for ham, 1 for spam\n",
+    "\n",
+    "# Convert emails to feature vectors using CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(emails['email'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. split the data into training and testing sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, labels, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Classifier  Accuracy\n",
+      "0           Perceptron  0.985808\n",
+      "1  Logistic Regression  0.990175\n",
+      "2                  SVM  0.989083\n",
+      "3        Decision Tree  0.972707\n",
+      "4        Random Forest  0.974891\n",
+      "5                  KNN  0.934498\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import Perceptron\n",
+    "\n",
+    "# 5. train several classifiers (e.g., Perceptron, Logistic Regression, SVM, etc.)\n",
+    "# Initialize classifiers\n",
+    "classifiers = {\n",
+    "    \"Perceptron\": Perceptron(random_state=42),\n",
+    "    \"Logistic Regression\": LogisticRegression(max_iter=1000, random_state=42),\n",
+    "    \"SVM\": SVC(kernel='linear', random_state=42),\n",
+    "    \"Decision Tree\": DecisionTreeClassifier(random_state=42),\n",
+    "    \"Random Forest\": RandomForestClassifier(random_state=42),\n",
+    "    \"KNN\": KNeighborsClassifier(n_neighbors=5)\n",
+    "}\n",
+    "\n",
+    "# Train and evaluate each classifier\n",
+    "results = []\n",
+    "for name, clf in classifiers.items():\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    y_pred = clf.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    results.append({\"Classifier\": name, \"Accuracy\": accuracy})\n",
+    "\n",
+    "# Display results in a table\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(results_df)"
    ]
   }
  ],
