--- a/Semester 2/COMP7310 - Artificial intelligence of things/project/onboard/motion_detection.ipynb
+++ b/Semester 2/COMP7310 - Artificial intelligence of things/project/onboard/motion_detection.ipynb
@@ -264,11 +264,86 @@
     "        rssi_std = float(df['rssi'].std())\n",
     "        print(f\"file {filename} 's rssi std: {rssi_std}, which is {'motion' if rssi_std >= 1.0 else 'static'}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1d08866f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = [15,1,15,2,15,2,16,4,16,5,16,5,16,6,17,5,17,5,18,5,19,5,19,6,20,7,20,6,20,6,20,5,21,4,21,3,22,3,23,3,24,3,25,2,25,2,25,2,26,2,26,2,25,3,26,3,0,0,28,-1,27,-1,27,0,27,0,27,1,26,0,26,-1,25,-1,25,-2,24,-4,23,-3,23,-4,22,-4,21,-3,20,-3,20,-3,20,-4,19,-4,19,-5,20,-5,19,-6,19,-5,18,-5,18,-4,17,-3,17,-2,15,-2,15,-2,-4,-12,-4,-13,-3,-13,-3,-15,-3,-16,-3,-16,-2,-16,-2,-16,-2,-16,-2,-16,-2,-16,-2,-17,-3,-18,-3,-18,-3,-18,-4,-18,-4,-18,-3,-19,-3,-20,-4,-21,-5,-21,-4,-21,-4,-22,-4,-23,-5,-23,-5,-23,-6,-24,-7,-24,0,0,-4,-23,-4,-23,-5,-22,-6,-22,-6,-21,-7,-22,-6,-21,-6,-21,-5,-20,-5,-19,-5,-18,-6,-17,-6,-17,-6,-17,-6,-17,-6,-17,-6,-16,-5,-16,-5,-16,-4,-16,-4,-15,-3,-15,-3,-13,-3,-13,-3,-12,-2,-12,-1,-12,0,-12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d4622401",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "228"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a835a3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "当前Wi-Fi信道: 未知\n"
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "def get_wifi_channel_windows():\n",
+    "    try:\n",
+    "        result = subprocess.run([\"netsh\", \"wlan\", \"show\", \"interfaces\"], capture_output=True, text=True)\n",
+    "        output = result.stdout\n",
+    "        if \"频道\" in output:  # 中文系统\n",
+    "            channel_line = [line for line in output.split('\\n') if \"频道\" in line][0]\n",
+    "            channel = channel_line.split(\":\")[1].strip()\n",
+    "        elif \"Channel\" in output:  # 英文系统\n",
+    "            channel_line = [line for line in output.split('\\n') if \"Channel\" in line][0]\n",
+    "            channel = channel_line.split(\":\")[1].strip()\n",
+    "        else:\n",
+    "            channel = \"未知\"\n",
+    "        return channel\n",
+    "    except Exception as e:\n",
+    "        return f\"错误: {e}\"\n",
+    "\n",
+    "print(\"当前Wi-Fi信道:\", get_wifi_channel_windows())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b5fa766",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aiot",
+   "display_name": "llm",
    "language": "python",
    "name": "python3"
   },
@@ -282,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
